--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ a:visited {
     margin: 0 auto; 
     padding: 0 15px; 
 }
+/*Header*/
 .header{
     background-image: url("../img/bg.jpg");
     background-position: center;
@@ -57,6 +58,10 @@ a:visited {
 .menu__items li {
     display: inline-block;
     padding: 0 25px;
+}
+.menu__items li:hover{
+    transform: scale(1.2);
+    transition: .1 linear;
 }
 .menu__items {
     text-align: center;
@@ -85,6 +90,14 @@ a:visited {
     font-size: 18px;
     margin-top: 135px;
 }
+.header__button{
+
+}
+.header__button:hover{
+    transform: scale(1.5);
+    transition: .1s linear;
+}
+/*About*/
 .about__menu{
     color: #bebebe;
     border-bottom: 1px solid #bbbbbb;
@@ -120,6 +133,113 @@ a:visited {
     text-align: center;
     text-transform: uppercase;
 }
+.about__button{
+
+}
+.about__button:hover{
+    transform: scale(1.5);
+    transition: .1s linear;
+}
 .dbl-arrow {
     text-align: center;  
+}
+
+/*PORTFOLIO*/
+.portfolio{
+    text-align: center;
+    background: url("../img/portfolio-bg.jpg") center/ cover no-repeat;
+}
+.portfolio__title{
+     font-size: 60px;
+    color: #f1f1f1;
+    font-family: 'Conv_Nexa Light';
+    text-align: center;
+    margin-top: 190px;
+    margin-bottom: 90px;
+}
+.portfolio__gallery{
+    margin-bottom: 85px;
+}
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+}
+.gallery__item{
+    max-width: 20%;
+}
+.gallery__item img{
+    max-width: 100%;
+    padding: 20px 25px;
+}
+.portfolio__scroll {
+    color: #f1f1f1;
+    font-size: 18px;
+    text-transform: uppercase;
+}
+.portfolio__button{
+
+}
+.portfolio__button:hover{
+    transform: scale(1.5);
+    transition: .1s linear;
+}
+
+/*CONTACTS*/
+.menu_grey{
+    color: grey;
+    border-bottom: 1px solid grey;
+}
+
+.contacts{
+   text-align: center;
+}
+.contacts__links{
+    margin-top: 210px;
+    margin-bottom: 210px;
+}
+.contacts__titles{
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+    margin-top: 70px;
+}
+.links__mail{
+    font-size: 60px;
+    font-family: 'Conv_Nexa Light';
+    text-transform: uppercase;
+}
+.links__mail:hover{
+     color: grey;
+    transition: .1s linear;
+}
+.links__phone{
+     font-size: 48px;
+    font-family: 'Conv_Nexa Light';
+    text-transform: uppercase;
+}
+.links__phone:hover{
+    color: grey;
+    transition: .1s linear;
+}
+.contacts__social{
+    padding: 0 12px;
+}
+.contacts__social:hover{
+    opacity: .5;
+}
+.footer__inner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer__content{
+    color: #bebebe;
+    font-size: 18px;
+    text-transform: uppercase;
+    padding-top: 45px;
+    padding-bottom: 45px;
+}
+.footer__wrapper{
+    border-top: solid 1px #bebebe;
 }
