--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ a:visited {
     text-transform: uppercase;
 }
 .about__button{
-
+    margin-bottom: 55px;
 }
 .about__button:hover{
     transform: scale(1.5);
@@ -176,8 +176,11 @@ a:visited {
     font-size: 18px;
     text-transform: uppercase;
 }
+.portfolio__text{
+    margin-bottom: 0;
+}
 .portfolio__button{
-
+   margin-bottom: 55px;
 }
 .portfolio__button:hover{
     transform: scale(1.5);
