--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,7 @@ a:visited {
     font-size: 18px;
     margin-top: 135px;
 }
-.header__button{
 
-}
 .header__button:hover{
     transform: scale(1.5);
     transition: .1s linear;
@@ -169,6 +167,10 @@ a:visited {
     max-width: 20%;
 }
 .gallery__item img{
+    max-width: 100%;
+    padding: 20px 25px;
+}
+.gallery__item a{
     max-width: 100%;
     padding: 20px 25px;
 }
